# TarkBot

./: .gitignore  CONTRIBUTING.md  README.md  configuration.py  debug.py  graphics_config.py  hideout.py  image_rec.py  launcher.py  main.py  pyproject.toml  requirements.txt  setup.py  setup_msi.py
.github/workflows/: python-build-msi.yml
detection/: image_rec.py
flea_bot/: __init__.py  flea.py  state.py
hideout_bot/: states.py
hideout_bot/stations/: generator.py  medstation.py  scav_case.py  water_collector.py
interface/: layout.py  stats.py
pytarkbot/: .gitignore  __main__.py  client.py  configuration.py  debug.py  dependency.py  flee.py  graphics_config.py  hideout.py  image_filtering.py  image_rec.py  launcher.py  logger.py  main.py  skill_leveling.py  tesseract_install.py
pytarkbot/bot/: __init__.py  flea.py  flee.py  state.py
pytarkbot/config/user_default_config/: Graphics.ini
pytarkbot/detection/: __init__.py  image_rec.py
pytarkbot/flea_bot/: flea.py  state.py
pytarkbot/flea_sell_bot/: state.py
pytarkbot/hideout_bot/: states.py
pytarkbot/hideout_bot/stations/: bitcoin_miner.py  generator.py  lavatory.py  medstation.py  scav_case.py  water_collector.py  workbench.py
pytarkbot/interface/: __init__.py  donate.py  dummy.py  help.py  layout.py  stats.py
pytarkbot/snipe_bot/: ruble_snipe_data.py  state.py
pytarkbot/tarkov/: __init__.py  client.py  graphics_config.py  launcher.py
pytarkbot/utils/: __init__.py  dependency.py  file_logging.py  logger.py  medal.py  thread.py
utils/: caching.py
