[tool.poetry]
name = "py-tarkbot"
version = "0.1.0"
description = ""
authors = ["Matt Main_PC <matmigg0804@gmail.com>"]
readme = "README.md"
packages = [{include = "py_tarkbot"}]

[tool.poetry.dependencies]
python = "^3.11"
pyautogui = "^0.9.54"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
