[tool.poetry]
name = "py-tarkbot"
version = "0.1.0"
description = ""
authors = ["Matt Main_PC <matmigg0804@gmail.com>"]
readme = "README.md"
packages = [{include = "pytarkbot"}]

[tool.poetry.dependencies]
python = "^3.11"
pyautogui = "^0.9.54"
joblib = "^1.3.2"
cx-freeze = "^6.15.7"
pysimplegui = "^4.60.5"
numpy = "^1.25.2"
opencv-python = "^4.8.0.76"
psutil = "^5.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
